# martin-trade

./: .env.example  .gitignore  Dockerfile  PROJECTPLAN.md  README.md  docker-compose.yml  pyproject.toml  repository.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
docs/: shadow-veto-tracker.xlsx
src/tradebot/: backtest.py  config.py  correlation.py  db.py  decision.py  engine.py  exchange.py  indicators.py  lists.py  live.py  llm.py  main.py  mqtt.py  notify.py  optimizer.py  paper.py  scanner.py  strategy.py  web.py
src/tradebot/analysis/: __init__.py  veto.py
tests/: __init__.py  conftest.py  test_chart.py  test_config_env.py  test_correlation.py  test_decision.py  test_guard.py  test_history_optimizer.py  test_indicators.py  test_interlock.py  test_lists.py  test_live.py  test_llm_router.py  test_mqtt.py  test_paper.py  test_scanner.py  test_strategy.py  test_veto_analysis.py
tradebot-addon/: DOCS.md  Dockerfile  config.yaml  entrypoint.py  sync.sh
