[project]
name = "tradebot"
version = "0.14.0"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S"]
ignore = ["S101"]  # assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "E501"]
"src/tradebot/web.py" = ["E501"]
"src/tradebot/main.py" = ["S104"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: test raakt de echte Bitvavo-API (netwerk); slaat over zonder verbinding",
]
